crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__typo__typo_ranking_rule_not_preceded_by_words_ranking_rule-5.snap
---
source: milli/src/search/new/tests/typo.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 9,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 1,
                max_typo_count: 9,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 8,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 8,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 7,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 7,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 7,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 7,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 7,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 7,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 5,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 5,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 4,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 4,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 3,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 3,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 3,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 3,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 3,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 3,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 2,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 2,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 2,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 1,
                max_typo_count: 2,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 1,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 1,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 1,
            },
        ),
    ],
    [
        Words(
            Words {
                matching_words: 1,
                max_matching_words: 9,
            },
        ),
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 1,
            },
        ),
    ],
]
